--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "adonis-lucid": "^3.0.12",
     "adonis-middleware": "^1.0.10",
     "adonis-websocket": "^1.0.2",
+    "sqlite3": "^3.1.8",
     "standard": "^8.6.0",
     "youch": "^1.0.1"
   },
