--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "adonis-framework": "^3.0.7",
     "adonis-lucid": "^3.0.12",
     "adonis-middleware": "^1.0.10",
+    "adonis-validation-provider": "^3.0.5",
     "adonis-websocket": "^1.0.2",
     "sqlite3": "^3.1.8",
     "standard": "^8.6.0",
